...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meeting_name_input"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

...
                android:layout_marginBottom="8dp"
                android:paddingStart="4dp"
                android:text="@string/place_input"
                android:textSize="18dp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/place_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/place_input"
                android:pointerIcon="arrow"
                android:prompt="@string/place_input"
                android:spinnerMode="dialog"
...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_input"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_input"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/participants_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/participants_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/participants_input"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/form_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorLamzone"
            android:padding="16dp"
...
