package fr.xp06.mareu.ui.meeting_list;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;
import android.widget.DatePicker;
import android.widget.TimePicker;

import androidx.test.espresso.DataInteraction;
import androidx.test.espresso.ViewInteraction;
import androidx.test.espresso.contrib.RecyclerViewActions;
import androidx.test.ext.junit.runners.AndroidJUnit4;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;

import com.google.android.material.textfield.TextInputLayout;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import fr.xp06.mareu.R;
import fr.xp06.mareu.utils.DeleteViewAction;

import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.contrib.PickerActions.setDate;
import static androidx.test.espresso.contrib.PickerActions.setTime;
import static androidx.test.espresso.matcher.ViewMatchers.isAssignableFrom;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withSpinnerText;
import static androidx.test.espresso.matcher.ViewMatchers.withText;

import static fr.xp06.mareu.utils.RecyclerViewItemCountAssertion.withItemCount;
import static fr.xp06.mareu.utils.Utils.day;
import static fr.xp06.mareu.utils.Utils.hours;
import static fr.xp06.mareu.utils.Utils.minutes;
import static fr.xp06.mareu.utils.Utils.month;
import static fr.xp06.mareu.utils.Utils.year;
import static org.hamcrest.CoreMatchers.anything;
import static org.hamcrest.CoreMatchers.containsString;
import static org.hamcrest.CoreMatchers.is;
import static org.hamcrest.core.AllOf.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MeetingsListTest {

    private static int ITEMS_COUNT = 0;

    @Rule
    public ActivityTestRule<MeetingsActivity> mActivityTestRule = new ActivityTestRule<>(MeetingsActivity.class);

    @Before
    public void setUp() {
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }

    public static Matcher<View> hasTextInputLayoutHintText(final String expectedErrorText) {
        return new TypeSafeMatcher<View>() {
            @Override
            public boolean matchesSafely(View view) {
                if (!(view instanceof TextInputLayout)) {
                    return false;
                }
                CharSequence error = ((TextInputLayout) view).getError();
                if (error == null) {
                    return false;
                }
                String hint = error.toString();
                return expectedErrorText.equals(hint);
            }

            @Override
            public void describeTo(Description description) {
            }
        };
    }

    @Test
    public void checkIfAddingMeetingIsWorking() {
        // Given :  We add one element
        onView(withId(R.id.meetings_recylerview)).check(withItemCount(ITEMS_COUNT));
        // When : We perform click on add meeting button
        onView(withId(R.id.fab_add_meeting)).perform(click());
        ViewInteraction textInputEditText = onView(
                allOf(withId(R.id.name_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.subject),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText.perform(replaceText("Réunion A"), closeSoftKeyboard());

        ViewInteraction appCompatSpinner = onView(
                allOf(withId(R.id.place_spinner), withContentDescription("Lieu"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        1),
                                1),
                        isDisplayed()));
        appCompatSpinner.perform(click());

        DataInteraction appCompatTextView = onData(anything())
                .inAdapterView(allOf(withId(R.id.select_dialog_listview),
                        childAtPosition(
                                withId(R.id.contentPanel),
                                0)))
                .atPosition(4);
        appCompatTextView.perform(click());

        // Show the date picker by typing twice on date  input text
        onView(withId(R.id.date_input)).perform(click());
        onView(withId(R.id.date_input)).perform(click());
        // Sets a date on the date picker widget
        // onView(isAssignableFrom(DatePicker.class)).perform(setDate(year, month, day+1));
        // Confirm the selected date for today.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected date is correct and is displayed in the Ui.
        onView(withId(R.id.date_input)).check(matches(allOf(withText(String.format("%02d/%02d", day, month + 1) + '/' + year),
                isDisplayed())));
        // Show the time picker by typing twice on time input text
        onView(withId(R.id.time_input)).perform(click());
        onView(withId(R.id.time_input)).perform(click());
        // Sets a time on the time picker widget
        onView(isAssignableFrom(TimePicker.class)).perform(setTime(hours + 1, minutes));
        // Confirm the selected time.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected time is correct and is displayed in the Ui.
        onView(withId(R.id.time_input)).check(matches(allOf(withText(String.format("%02dh%02d", hours + 1, minutes)),
                isDisplayed())));
        ViewInteraction textInputEditText4 = onView(
                allOf(withId(R.id.participants_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText4.perform(replaceText("laurent@free.fr,Roger@orange.fr"), closeSoftKeyboard());
        ViewInteraction textInputEditText5 = onView(
                allOf(withId(R.id.participants_input), withText("Laurent@free.fr,Roger@orange.fr"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        onView(withId(R.id.form_btn)).perform(click());

        // Then : The number of Element is 1
        onView(withId(R.id.meetings_recylerview)).check(withItemCount(ITEMS_COUNT + 1));
    }

    @Test
    public void checkIfFormValidationIsWorking_NewMeetingView() {
        onView(withId(R.id.fab_add_meeting)).perform(click());
        onView(withId(R.id.form_btn)).perform(click());
        onView(withId(R.id.subject)).check(matches(hasTextInputLayoutHintText("Ce champ est requis!")));
    }

    @Test
    public void checkIfDeleteMeetingIsWorking() {
        // Given :  We add one element
        onView(withId(R.id.meetings_recylerview)).check(withItemCount(ITEMS_COUNT));
        // When : We perform click on add meeting button
        onView(withId(R.id.fab_add_meeting)).perform(click());
        ViewInteraction textInputEditText = onView(
                allOf(withId(R.id.name_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.subject),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText.perform(replaceText("Réunion A"), closeSoftKeyboard());

        ViewInteraction appCompatSpinner = onView(
                allOf(withId(R.id.place_spinner), withContentDescription("Lieu"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        1),
                                1),
                        isDisplayed()));
        appCompatSpinner.perform(click());

        DataInteraction appCompatTextView = onData(anything())
                .inAdapterView(allOf(withId(R.id.select_dialog_listview),
                        childAtPosition(
                                withId(R.id.contentPanel),
                                0)))
                .atPosition(4);
        appCompatTextView.perform(click());

        // Show the date picker by typing twice on date  input text
        onView(withId(R.id.date_input)).perform(click());
        onView(withId(R.id.date_input)).perform(click());
        // Sets a date on the date picker widget
        // onView(isAssignableFrom(DatePicker.class)).perform(setDate(year, month, day+1));
        // Confirm the selected date for today.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected date is correct and is displayed in the Ui.
        onView(withId(R.id.date_input)).check(matches(allOf(withText(String.format("%02d/%02d", day, month + 1) + '/' + year),
                isDisplayed())));
        // Show the time picker by typing twice on time input text
        onView(withId(R.id.time_input)).perform(click());
        onView(withId(R.id.time_input)).perform(click());
        // Sets a time on the time picker widget
        onView(isAssignableFrom(TimePicker.class)).perform(setTime(hours + 1, minutes));
        // Confirm the selected time.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected time is correct and is displayed in the Ui.
        onView(withId(R.id.time_input)).check(matches(allOf(withText(String.format("%02dh%02d", hours + 1, minutes)),
                isDisplayed())));
        ViewInteraction textInputEditText4 = onView(
                allOf(withId(R.id.participants_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText4.perform(replaceText("laurent@free.fr,Roger@orange.fr"), closeSoftKeyboard());
        ViewInteraction textInputEditText5 = onView(
                allOf(withId(R.id.participants_input), withText("Laurent@free.fr,Roger@orange.fr"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        onView(withId(R.id.form_btn)).perform(click());

        // Given : We remove the element we just add
        onView(withId(R.id.meetings_recylerview)).check(withItemCount(1));
        onView(withId(R.id.meetings_recylerview))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, new DeleteViewAction()));
        //Then then number of element is 0
        onView(withId(R.id.meetings_recylerview)).check(withItemCount(ITEMS_COUNT));
    }

    @Test
    public void checkIfLaunchingDetailMeetingIsWorking() {
        // Given :  We add one element
        onView(withId(R.id.meetings_recylerview)).check(withItemCount(ITEMS_COUNT));
        // When : We perform click on add meeting button
        onView(withId(R.id.fab_add_meeting)).perform(click());
        ViewInteraction textInputEditText = onView(
                allOf(withId(R.id.name_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.subject),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText.perform(replaceText("Réunion A"), closeSoftKeyboard());

        //Select Luigi place
        ViewInteraction appCompatSpinner = onView(
                allOf(withId(R.id.place_spinner), withContentDescription("Lieu"),
                        childAtPosition(
                                childAtPosition(
                                        withClassName(is("android.widget.LinearLayout")),
                                        1),
                                1),
                        isDisplayed()));
        appCompatSpinner.perform(click());

        DataInteraction appCompatTextView = onData(anything())
                .inAdapterView(allOf(withId(R.id.select_dialog_listview),
                        childAtPosition(
                                withId(R.id.contentPanel),
                                0)))
                .atPosition(4);
        appCompatTextView.perform(click());

        // Show the date picker by typing twice on date  input text
        onView(withId(R.id.date_input)).perform(click());
        onView(withId(R.id.date_input)).perform(click());
        // Sets a date on the date picker widget
        // onView(isAssignableFrom(DatePicker.class)).perform(setDate(year, month, day+1));
        // Confirm the selected date for today.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected date is correct and is displayed in the Ui.
        onView(withId(R.id.date_input)).check(matches(allOf(withText(String.format("%02d/%02d", day, month + 1) + '/' + year),
                isDisplayed())));
        // Show the time picker by typing twice on time input text
        onView(withId(R.id.time_input)).perform(click());
        onView(withId(R.id.time_input)).perform(click());
        // Sets a time on the time picker widget
        onView(isAssignableFrom(TimePicker.class)).perform(setTime(hours + 1, minutes));
        // Confirm the selected time.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected time is correct and is displayed in the Ui.
        onView(withId(R.id.time_input)).check(matches(allOf(withText(String.format("%02dh%02d", hours + 1, minutes)),
                isDisplayed())));
        ViewInteraction textInputEditText4 = onView(
                allOf(withId(R.id.participants_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText4.perform(replaceText("herbert@gmail.com,raptor@orange.fr"), closeSoftKeyboard());
        ViewInteraction textInputEditText5 = onView(
                allOf(withId(R.id.participants_input), withText("nerbert@gmail.com,raptor@orange.fr"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        onView(withId(R.id.form_btn)).perform(click());
        //click on new created item in the recyclerview
       /* onView(ViewMatchers.withId(R.id.meetings_recylerview))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));*/
        ViewInteraction materialCardView = onView(
                allOf(withId(R.id.item_list_meeting_avatar),
                        childAtPosition(
                                allOf(withId(R.id.meetings_recylerview),
                                        childAtPosition(
                                                withId(R.id.frameLayout),
                                                1)),
                                0),
                        isDisplayed()));
        materialCardView.perform(click());
        /*onView(withId(R.id.place_detail))
                .check(matches(withText("Luigi")));*/
        ViewInteraction textView = onView(
                allOf(withId(R.id.place_detail), withText("Luigi"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.item_detail_container),
                                        0),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("Luigi")));
    }

    @Test
    public void checkIfFiltersAreWorking() {
        // We add 2 meetings to test filters
        onView(withId(R.id.fab_add_meeting)).perform(click());
        ViewInteraction textInputEditText = onView(
                allOf(withId(R.id.name_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.subject),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText.perform(replaceText("Réunion A"), closeSoftKeyboard());
        //Confirm selected date is Daisy
        onView(withId(R.id.place_spinner)).perform(click());
        onData(anything()).atPosition(1).perform(click());
        onView(withId(R.id.place_spinner)).check(matches(withSpinnerText(containsString("Daisy"))));
        // Show the date picker by typing twice on date  input text
        onView(withId(R.id.date_input)).perform(click());
        onView(withId(R.id.date_input)).perform(click());
        // Sets a date on the date picker widget
        // onView(isAssignableFrom(DatePicker.class)).perform(setDate(year, month, day+1));
        // Confirm the selected date for today.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected date is correct and is displayed in the Ui.
        onView(withId(R.id.date_input)).check(matches(allOf(withText(String.format("%02d/%02d", day, month + 1) + '/' + year),
                isDisplayed())));
        // Show the time picker by typing twice on time input text
        onView(withId(R.id.time_input)).perform(click());
        onView(withId(R.id.time_input)).perform(click());
        // Sets a time on the time picker widget
        onView(isAssignableFrom(TimePicker.class)).perform(setTime(hours + 1, minutes));
        // Confirm the selected time.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected time is correct and is displayed in the Ui.
        onView(withId(R.id.time_input)).check(matches(allOf(withText(String.format("%02dh%02d", hours + 1, minutes)),
                isDisplayed())));
        ViewInteraction textInputEditText4 = onView(
                allOf(withId(R.id.participants_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText4.perform(replaceText("herbert@gmail.com,raptor@orange.fr"), closeSoftKeyboard());
        onView(
                allOf(withId(R.id.participants_input), withText("herbert@gmail.com,raptor@orange.fr"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        onView(withId(R.id.form_btn)).perform(click());

        //Add second meeting
        onView(withId(R.id.fab_add_meeting)).perform(click());
        onView(
                allOf(withId(R.id.name_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.subject),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText.perform(replaceText("Réunion B"), closeSoftKeyboard());
        //Confirm selected date is Yoshi
        onView(withId(R.id.place_spinner)).perform(click());
        onData(anything()).atPosition(9).perform(click());
        onView(withId(R.id.place_spinner)).check(matches(withSpinnerText(containsString("Yoshi"))));

        // Show the date picker by typing twice on date  input text
        onView(withId(R.id.date_input)).perform(click());
        onView(withId(R.id.date_input)).perform(click());
        // Sets a date on the date picker widget
        // onView(isAssignableFrom(DatePicker.class)).perform(setDate(year, month, day+1));
        // Confirm the selected date for today.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected date is correct and is displayed in the Ui.
        onView(withId(R.id.date_input)).check(matches(allOf(withText(String.format("%02d/%02d", day, month + 1) + '/' + year),
                isDisplayed())));
        // Show the time picker by typing twice on time input text
        onView(withId(R.id.time_input)).perform(click());
        onView(withId(R.id.time_input)).perform(click());
        // Sets a time on the time picker widget
        onView(isAssignableFrom(TimePicker.class)).perform(setTime(hours + 1, minutes));
        // Confirm the selected time.
        onView(withId(android.R.id.button1)).perform(click());
        // Check if the selected time is correct and is displayed in the Ui.
        onView(withId(R.id.time_input)).check(matches(allOf(withText(String.format("%02dh%02d", hours + 1, minutes)),
                isDisplayed())));
        onView(
                allOf(withId(R.id.participants_input),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.participants_layout),
                                        0),
                                0),
                        isDisplayed()));
        textInputEditText4.perform(replaceText("herbert@gmail.com,raptor@orange.fr"), closeSoftKeyboard());
        onView(
                allOf(withId(R.id.participants_input), withText("herbert@gmail.com,raptor@orange.fr"),
                        childAtPosition(
                                childAtPosition(
